--- a/style.css
+++ b/style.css
@@ -2,10 +2,19 @@ body{
     width: 100%;
     height: 150px;
     background-image: url(./img/movie.jpg);
+    background-size: cover;
+    margin: 0 0 0 0;
 
 }
+.card{
+  background: rgba(0, 0, 0, .5);
+  height: 1000px;
+  margin: 0 auto;
+  padding: 23px;
+}
 .nav{
-  font-size: 80px;
+  background: rgba(0, 0, 0, .5);
+  font-size:90px;
   display: wavy;
   font-style: italic;
   color: rgb(155, 31, 31);
