--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
 .card{
   background: rgba(0, 0, 0, .5);
   height: 1000px;
-  margin: 0 auto;
+  margin: 0 0 0 0;
   padding: 23px;
 }
 .nav{
